test/libsolidity/syntaxTests/nameAndTypeResolution/experimental_pragma_unknown_number_literal.sol
pragma experimental 123;
// ----
// SyntaxError: (0-24): Unsupported experimental feature name.
